<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.notamethod</groupId>
    <artifactId>fluppy</artifactId>
    <version>0.2</version>
    <name>fluppy-box</name>

    <properties>
        <maven.compiler.source>25</maven.compiler.source>
        <maven.compiler.target>21</maven.compiler.target>
        <maven.compiler.release>21</maven.compiler.release>
        <sonar.organization>notamethod</sonar.organization>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <javafx.version>21.0.6</javafx.version>
        <junit.version>5.10.2</junit.version>
    </properties>

    <dependencies>

        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-controls</artifactId>
            <version>${javafx.version}</version>
        </dependency>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-fxml</artifactId>
            <version>${javafx.version}</version>
        </dependency>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-web</artifactId>
            <version>${javafx.version}</version>
        </dependency>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-swing</artifactId>
            <version>${javafx.version}</version>
        </dependency>
        <dependency>
            <groupId>org.controlsfx</groupId>
            <artifactId>controlsfx</artifactId>
            <version>11.2.1</version>
        </dependency>
        <dependency>
            <groupId>com.dlsc.formsfx</groupId>
            <artifactId>formsfx-core</artifactId>
            <version>11.6.0</version>
            <exclusions>
                <exclusion>
                    <groupId>org.openjfx</groupId>
                    <artifactId>*</artifactId>
                </exclusion>
            </exclusions>
        </dependency>

        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-api</artifactId>
            <version>${junit.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-engine</artifactId>
            <version>${junit.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <version>1.18.38</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.mapstruct</groupId>
            <artifactId>mapstruct</artifactId>
            <version>1.6.3</version>
        </dependency>
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok-mapstruct-binding</artifactId>
            <version>0.2.0</version>
            <scope>provided</scope>
        </dependency>
        <!-- https://mvnrepository.com/artifact/ch.qos.logback/logback-classic -->
        <dependency>
            <groupId>ch.qos.logback</groupId>
            <artifactId>logback-classic</artifactId>
            <version>1.5.23</version>
        </dependency>
        <dependency>
            <groupId>com.fasterxml.jackson.core</groupId>
            <artifactId>jackson-databind</artifactId>
            <version>2.17.0</version>
            <exclusions>
                <exclusion>
                    <groupId>net.bytebuddy</groupId>
                    <artifactId>byte-buddy</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-compress</artifactId>
            <version>1.28.0</version>
        </dependency>
        <dependency>
            <groupId>org.tukaani</groupId>
            <artifactId>xz</artifactId>
            <version>1.10</version>
        </dependency>
        <!-- JPA + Hibernate -->
        <dependency>
            <groupId>org.hibernate.orm</groupId>
            <artifactId>hibernate-core</artifactId>
            <version>7.1.0.Final</version>
            <exclusions>
                <exclusion>
                    <groupId>org.hibernate.orm</groupId>
                    <artifactId>hibernate-bytecode-bytebuddy</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>net.bytebuddy</groupId>
                    <artifactId>byte-buddy</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
        <dependency>
            <groupId>org.hibernate.orm</groupId>
            <artifactId>hibernate-graalvm</artifactId>
            <version>7.1.0.Final</version>
            <exclusions>
                <exclusion>
                    <groupId>org.hibernate.orm</groupId>
                    <artifactId>hibernate-bytecode-bytebuddy</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
        <dependency>
            <groupId>org.javassist</groupId>
            <artifactId>javassist</artifactId>
            <version>3.29.2-GA</version>
        </dependency>

        <!-- H2 Database -->
        <dependency>
            <groupId>com.h2database</groupId>
            <artifactId>h2</artifactId>
            <version>2.2.224</version>
        </dependency>


        <!-- à partir de graalvm21, anootation dispo pour RegisterForReflection
                    <dependency>-->
        <!--            <groupId>org.graalvm.nativeimage</groupId>-->
        <!--            <artifactId>svm</artifactId>-->
        <!--            <version>23.1.2</version>-->
        <!--            <scope>provided</scope>-->
        <!--        </dependency>-->

    </dependencies>
    <dependencyManagement>
        <dependencies>
            <!--
            <dependency>
                <groupId>org.hibernate.orm</groupId>
                <artifactId>hibernate-bom</artifactId>
                <version>7.1.0.Final</version>
                <type>pom</type>
                <scope>import</scope>
                <exclusions>
                    <exclusion>
                        <groupId>org.hibernate.orm</groupId>
                        <artifactId>hibernate-bytecode-bytebuddy</artifactId>
                    </exclusion>
                </exclusions>
            </dependency>

            -->
        </dependencies>
    </dependencyManagement>
    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.13.0</version>
                <configuration>
                    <release>${maven.compiler.release}</release>
                    <annotationProcessorPaths>
                        <path>
                            <groupId>org.projectlombok</groupId>
                            <artifactId>lombok</artifactId>
                            <version>1.18.38</version>
                        </path>
                        <path>
                            <groupId>org.mapstruct</groupId>
                            <artifactId>mapstruct-processor</artifactId>
                            <version>1.6.3</version>
                        </path>
                    </annotationProcessorPaths>
                    <fork>true</fork>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
                <version>3.3.0</version>
                <configuration>
                    <archive>
                        <manifest>
                            <mainClass>com.notamethod.fluppy.gui.GamesWall</mainClass>

                            <addClasspath>true</addClasspath>
                        </manifest>
                    </archive>
                </configuration>
            </plugin>


        </plugins>
    </build>
    <profiles>
        <profile>
            <id>local</id>
            <activation>
                <activeByDefault>true</activeByDefault>
            </activation>
            <dependencies>
                <dependency>
                            <groupId>net.bytebuddy</groupId>
                            <artifactId>byte-buddy</artifactId>
                            <version>1.14.12</version>
                            <scope>runtime</scope>
                        </dependency>
            </dependencies>
        </profile>
        <profile>
            <id>native</id>
            <!--            <activation>-->
            <!--                <os>-->
            <!--                    <family>windows</family>-->
            <!--                </os>-->
            <!--            </activation>-->
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.graalvm.buildtools</groupId>
                        <artifactId>native-maven-plugin</artifactId>
                        <version>0.11.4</version>
                        <extensions>true</extensions>
                        <executions>
                            <execution>
                                <id>native-image</id>
                                <goals>
                                    <goal>compile-no-fork</goal>
                                </goals>
                                <phase>package</phase>
                                <configuration>
                                    <imageName>fluppy</imageName>
                                    <mainClass>com.notamethod.fluppy.gui.GamesWall</mainClass>
                                    <buildArgs>
                                        <buildArg>--no-fallback</buildArg>
                                        <buildArg>-Dhibernate.bytecode.provider=none</buildArg>
                                        <buildArg>--enable-url-protocols=http,https</buildArg>
                                        <buildArg>--enable-native-access=ALL-UNNAMED</buildArg>
                                        <buildArg>-H:NativeLinkerOption=/DEFAULTLIB:Shlwapi.lib</buildArg>
                                        <!-- reduce file size
                                                                                <buildArg>-H:GenerateDebugInfo=0</buildArg>
                                                                                <buildArg>-H:+RemoveUnusedSymbols</buildArg>
                                                                                <buildArg>-H:Optimize=2</buildArg>
                                                                                -->
                                    </buildArgs>

                                </configuration>
                            </execution>
                        </executions>
                    </plugin>
                    <plugin>
                        <groupId>org.hibernate.orm</groupId>
                        <artifactId>hibernate-maven-plugin</artifactId>
                        <version>7.1.0.Final</version>
                        <executions>
                            <execution>
                                <goals>
                                    <goal>enhance</goal>
                                </goals>
                                <configuration>
                                    <enableLazyInitialization>true</enableLazyInitialization>
                                    <enableDirtyTracking>true</enableDirtyTracking>
                                    <enableAssociationManagement>true</enableAssociationManagement>
                                    <enableExtendedEnhancement>false</enableExtendedEnhancement>
                                </configuration>
                            </execution>
                        </executions>
                    </plugin>
                    <plugin>
                        <groupId>org.codehaus.mojo</groupId>
                        <artifactId>exec-maven-plugin</artifactId>
                        <version>3.4.1</version>
                        <executions>
                            <execution>
                                <id>post-build-script</id>
                                <phase>package</phase>
                                <goals>
                                    <goal>exec</goal>
                                </goals>
                                <configuration>
                                    <executable>cmd</executable>
                                    <arguments>
                                        <argument>/c</argument>
                                        <argument>${project.basedir}/scripts/windows/post-install.bat</argument>
                                    </arguments>
                                </configuration>
                            </execution>
                        </executions>
                    </plugin>
                </plugins>

            </build>
        </profile>
        <profile>
            <id>nativelin</id>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.graalvm.buildtools</groupId>
                        <artifactId>native-maven-plugin</artifactId>
                        <version>0.11.4</version>
                        <extensions>true</extensions>
                        <executions>
                            <execution>
                                <id>native-image</id>
                                <goals>
                                    <goal>compile-no-fork</goal>
                                </goals>
                                <phase>package</phase>
                                <configuration>

                                    <imageName>fluppy</imageName>
                                    <mainClass>com.notamethod.fluppy.gui.GamesWall</mainClass>

                                    <buildArgs>
                                        <buildArg>--no-fallback</buildArg>
                                        <buildArg>-Dhibernate.bytecode.provider=none</buildArg>
                                        <buildArg>--enable-url-protocols=http,https</buildArg>
                                        <buildArg>--enable-native-access=ALL-UNNAMED</buildArg>

                                                                                <buildArg>-H:GenerateDebugInfo=0</buildArg>
                                                                                <buildArg>-H:+RemoveUnusedSymbols</buildArg>
                                                                                <buildArg>-H:Optimize=2</buildArg>
                                                                                -->
                                    </buildArgs>

                                </configuration>
                            </execution>
                        </executions>
                    </plugin>
                    <plugin>
                        <groupId>org.hibernate.orm</groupId>
                        <artifactId>hibernate-maven-plugin</artifactId>
                        <version>7.1.0.Final</version>
                        <executions>
                            <execution>
                                <goals>
                                    <goal>enhance</goal>
                                </goals>
                                <configuration>
                                    <enableLazyInitialization>true</enableLazyInitialization>
                                    <enableDirtyTracking>true</enableDirtyTracking>
                                    <enableAssociationManagement>true</enableAssociationManagement>
                                    <enableExtendedEnhancement>false</enableExtendedEnhancement>
                                </configuration>
                            </execution>
                        </executions>
                    </plugin>
                    <plugin>
                        <groupId>org.codehaus.mojo</groupId>
                        <artifactId>exec-maven-plugin</artifactId>
                        <version>3.4.1</version>
                        <executions>
                            <execution>
                                <id>post-build-script</id>
                                <phase>package</phase>
                                <goals>
                                    <goal>exec</goal>
                                </goals>
                                <configuration>
                                    <executable>${project.basedir}/scripts/post-build.sh</executable>
                                </configuration>
                            </execution>
                        </executions>
                    </plugin>
                </plugins>

            </build>
        </profile>
    </profiles>
</project>



